feat: AgentRouter v2 - multi-provider orchestration with subscription mode
## New Features
- Add Anthropic as configurable provider with subscription/API modes
- Add 'coder' agent role for code implementation tasks
- Restructured setup wizard with clear 4-step flow:
  1. Choose orchestrator (subscription option for Claude Code)
  2. Add agent providers (API keys required)
  3. Configure API keys (masked input)
  4. Assign agent roles

## Updated Providers (January 2026)
- Anthropic: Claude Opus/Sonnet/Haiku 4.5
- OpenAI: GPT-5.2, GPT-5.1, GPT-5, o3 series
- Google Gemini: Gemini 3/2.5 Pro/Flash
- DeepSeek: V3.2 Reasoner/Chat
- Z.AI: GLM-4.7, GLM-4.7 FlashX/Flash
- Ollama: Local models

## Documentation
- Complete README with examples and usage
- Provider setup guide for all 6 providers
- Configuration reference
- API reference with MCP tools
- Architecture documentation
- Contributing guidelines
- MIT License

## Security
- API keys now masked during setup input
- Subscription mode limited to orchestrator only
- Environment variable interpolation for secrets

## Package
- Renamed to @sashabogi/agent-router
- Updated repository URLs

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,50 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+
+# Test coverage
 coverage/
+
+# Environment files (contain API keys!)
 .env
 .env.local
+.env.*.local
+
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
 .DS_Store
+Thumbs.db
+
+# IDE / Editor
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Argus snapshots
 .argus/
+
+# Backup files
+*.backup
+*.bak
+
+# TypeScript
+*.tsbuildinfo
+
+# Internal development files (not for public repo)
+CLAUDE.md
+PROGRESS.md
+TODO.md
+docs/PRD-AgentRouter.md
+docs/TDD-AgentRouter.md
+
+# Config with actual API keys (the template is fine)
+# User config is at ~/.config/agent-router/ anyway
