--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hive/agent-router",
+  "name": "@sashabogi/agent-router",
   "version": "0.1.0",
   "description": "MCP server for multi-agent orchestration - route tasks to specialized AI agents from different LLM providers",
   "type": "module",
@@ -34,7 +34,7 @@
     "openai",
     "gemini"
   ],
-  "author": "Hive Development Team",
+  "author": "Sasha Bogojevic",
   "license": "MIT",
   "dependencies": {
     "@clack/prompts": "^0.11.0",
@@ -65,6 +65,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/hive-dev/agent-router.git"
+    "url": "https://github.com/sashabogi/agent-router.git"
   }
 }
